# dp-examples

./: LICENSE  MODULE.bazel  README.md
.github/workflows/: ci.yaml
src/apps/: README.md
src/apps/milestone-xprotect/: README.md
src/apps/standalone/: README.md  docker-compose.yaml
src/setup/: README.md  pi5-setup.sh  x86-setup.sh
tools/format/: BUILD.bazel
